--- a/Web/res/themes/image_blue_star/theme.css
+++ b/Web/res/themes/image_blue_star/theme.css
@@ -190,7 +190,6 @@
 .f-tabstrip-header .f-tabstrip-header-inkbar {
     background-color: #00599F;
 }
-
 .f-tabstrip-inkbar > .f-tabstrip-header .f-tab-header.f-state-active {
     background-color: #fafafa;
 }
@@ -207,8 +206,7 @@
     }*/
 
 /* CheckBox - RadioButton */
-.f-checkbox.f-checked,
-.f-checkbox.f-checkbox-indeterminate {
+.f-checkbox.f-checked {
     background-color: #00599F;
     border-color: #00599F;
 }
@@ -356,14 +354,7 @@
 .bgpanel .f-widget-content,
 .bgpanel a,
 .bgpanel .f-icon {
-    color: rgba(255, 255, 255, 0.9);
-}
-
-.f-ie8 .bgpanel .f-widget-header,
-.f-ie8 .bgpanel .f-widget-content,
-.f-ie8 .bgpanel a,
-.f-ie8 .bgpanel .f-icon {
-    color: #fff;
+	color: rgba(255, 255, 255, 0.9);
 }
 
 
@@ -409,7 +400,6 @@
 
 
 /* Custom scrollbar */
-/*
 ::-webkit-scrollbar {
     width: 10px;
     height: 10px;
@@ -436,7 +426,7 @@
     ::-webkit-scrollbar-thumb:active {
         background-color: rgba(0, 0, 0, .3);
     }
-*/
+
 
 
 
@@ -449,8 +439,3 @@
     .f-progressbar .f-progressbar-value {
         background-color: #00599F;
     }
-
-
-.f-grid-row.f-grid-row-newadded > .f-grid-cell:first-child > .f-grid-cell-inner:after {
-	color: #00599F;
-}
