--- a/Web/res/themes/pure_red/theme.css
+++ b/Web/res/themes/pure_red/theme.css
@@ -192,7 +192,6 @@
 .f-tabstrip-header .f-tabstrip-header-inkbar {
     background-color: #9E0062;
 }
-
 .f-tabstrip-inkbar > .f-tabstrip-header .f-tab-header.f-state-active {
     background-color: #fafafa;
 }
@@ -209,8 +208,7 @@
     }*/
 
 /* CheckBox - RadioButton */
-.f-checkbox.f-checked,
-.f-checkbox.f-checkbox-indeterminate {
+.f-checkbox.f-checked {
     background-color: #9E0062;
     border-color: #9E0062;
 }
@@ -352,28 +350,21 @@
 .bgpanel .f-widget-content,
 .bgpanel a,
 .bgpanel .f-icon {
-    color: rgba(255, 255, 255, 0.7);
+	color: rgba(255, 255, 255, 0.7);
 }
 
-.f-ie8 .bgpanel .f-widget-header,
-.f-ie8 .bgpanel .f-widget-content,
-.f-ie8 .bgpanel a,
-.f-ie8 .bgpanel .f-icon {
-    color: #fff;
-}
-
-.bgpanel a:hover,
-.bgpanel .f-state-hover,
-.bgpanel .f-state-hover a,
-.bgpanel .f-state-hover .f-icon,
-.bgpanel .f-state-focus,
-.bgpanel .f-state-focus a,
-.bgpanel .f-state-focus .f-icon,
-.bgpanel .f-state-active,
-.bgpanel .f-state-active a,
-.bgpanel .f-state-active .f-icon {
-    color: #fff;
-}
+    .bgpanel a:hover,
+    .bgpanel .f-state-hover,
+    .bgpanel .f-state-hover a,
+    .bgpanel .f-state-hover .f-icon,
+    .bgpanel .f-state-focus,
+    .bgpanel .f-state-focus a,
+    .bgpanel .f-state-focus .f-icon,
+    .bgpanel .f-state-active,
+    .bgpanel .f-state-active a,
+    .bgpanel .f-state-active .f-icon {
+        color: #fff;
+    }
 
 
 .bgpanel .f-mainheader {
@@ -403,7 +394,6 @@
 
 
 /* Custom scrollbar */
-/*
 ::-webkit-scrollbar {
     width: 10px;
     height: 10px;
@@ -430,8 +420,8 @@
     ::-webkit-scrollbar-thumb:active {
         background-color: rgba(0, 0, 0, .3);
     }
-*/
 
+	
 
 /* Special - progressbar */
 .f-progressbar {
@@ -442,7 +432,3 @@
     .f-progressbar .f-progressbar-value {
         background-color: #9E0062;
     }
-
-.f-grid-row.f-grid-row-newadded > .f-grid-cell:first-child > .f-grid-cell-inner:after {
-	color: #9E0062;
-}
