--- a/Web/res/themes/pure_black/theme.css
+++ b/Web/res/themes/pure_black/theme.css
@@ -211,8 +211,7 @@
     */
 
 /* CheckBox - RadioButton */
-.f-checkbox.f-checked,
-.f-checkbox.f-checkbox-indeterminate {
+.f-checkbox.f-checked {
     background-color: #007465;
     border-color: #007465;
 }
@@ -352,29 +351,21 @@
 .bgpanel .f-widget-content,
 .bgpanel a,
 .bgpanel .f-icon {
-    color: rgba(255, 255, 255, 0.7);
+	color: rgba(255, 255, 255, 0.7);
 }
 
-.f-ie8 .bgpanel .f-widget-header,
-.f-ie8 .bgpanel .f-widget-content,
-.f-ie8 .bgpanel a,
-.f-ie8 .bgpanel .f-icon {
-    color: #fff;
-}
-
-
-.bgpanel a:hover,
-.bgpanel .f-state-hover,
-.bgpanel .f-state-hover a,
-.bgpanel .f-state-hover .f-icon,
-.bgpanel .f-state-focus,
-.bgpanel .f-state-focus a,
-.bgpanel .f-state-focus .f-icon,
-.bgpanel .f-state-active,
-.bgpanel .f-state-active a,
-.bgpanel .f-state-active .f-icon {
-    color: #fff;
-}
+    .bgpanel a:hover,
+    .bgpanel .f-state-hover,
+    .bgpanel .f-state-hover a,
+    .bgpanel .f-state-hover .f-icon,
+    .bgpanel .f-state-focus,
+    .bgpanel .f-state-focus a,
+    .bgpanel .f-state-focus .f-icon,
+    .bgpanel .f-state-active,
+    .bgpanel .f-state-active a,
+    .bgpanel .f-state-active .f-icon {
+        color: #fff;
+    }
 
 .bgpanel .f-mainheader {
     background-color: #222;
@@ -403,7 +394,6 @@
 
 
 /* Custom scrollbar */
-/*
 ::-webkit-scrollbar {
     width: 10px;
     height: 10px;
@@ -430,7 +420,7 @@
     ::-webkit-scrollbar-thumb:active {
         background-color: rgba(0, 0, 0, .3);
     }
-*/
+
 
 
 /* Special - progressbar */
@@ -442,8 +432,3 @@
     .f-progressbar .f-progressbar-value {
         background-color: #007465;
     }
-
-
-.f-grid-row.f-grid-row-newadded > .f-grid-cell:first-child > .f-grid-cell-inner:after {
-	color: #007465;
-}
