--- a/Web/res/themes/pure_orange/theme.css
+++ b/Web/res/themes/pure_orange/theme.css
@@ -191,7 +191,6 @@
 .f-tabstrip-header .f-tabstrip-header-inkbar {
     background-color: #B06101;
 }
-
 .f-tabstrip-inkbar > .f-tabstrip-header .f-tab-header.f-state-active {
     background-color: #fafafa;
 }
@@ -208,8 +207,7 @@
     }*/
 
 /* CheckBox - RadioButton */
-.f-checkbox.f-checked,
-.f-checkbox.f-checkbox-indeterminate {
+.f-checkbox.f-checked {
     background-color: #B06101;
     border-color: #B06101;
 }
@@ -350,28 +348,21 @@
 .bgpanel .f-widget-content,
 .bgpanel a,
 .bgpanel .f-icon {
-    color: rgba(255, 255, 255, 0.7);
+	color: rgba(255, 255, 255, 0.7);
 }
 
-.f-ie8 .bgpanel .f-widget-header,
-.f-ie8 .bgpanel .f-widget-content,
-.f-ie8 .bgpanel a,
-.f-ie8 .bgpanel .f-icon {
-    color: #fff;
-}
-
-.bgpanel a:hover,
-.bgpanel .f-state-hover,
-.bgpanel .f-state-hover a,
-.bgpanel .f-state-hover .f-icon,
-.bgpanel .f-state-focus,
-.bgpanel .f-state-focus a,
-.bgpanel .f-state-focus .f-icon,
-.bgpanel .f-state-active,
-.bgpanel .f-state-active a,
-.bgpanel .f-state-active .f-icon {
-    color: #fff;
-}
+    .bgpanel a:hover,
+    .bgpanel .f-state-hover,
+    .bgpanel .f-state-hover a,
+    .bgpanel .f-state-hover .f-icon,
+    .bgpanel .f-state-focus,
+    .bgpanel .f-state-focus a,
+    .bgpanel .f-state-focus .f-icon,
+    .bgpanel .f-state-active,
+    .bgpanel .f-state-active a,
+    .bgpanel .f-state-active .f-icon {
+        color: #fff;
+    }
 
 
 .bgpanel .f-mainheader {
@@ -402,7 +393,6 @@
 
 
 /* Custom scrollbar */
-/*
 ::-webkit-scrollbar {
     width: 10px;
     height: 10px;
@@ -429,7 +419,6 @@
     ::-webkit-scrollbar-thumb:active {
         background-color: rgba(0, 0, 0, .3);
     }
-*/
 
 
 /* Special - progressbar */
